--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     @@include('html/header.html', {})
     @@include('html/main.html', {})
     @@include('html/footer.html', {})
-    <script src="./js/app.min.js"></script>
+    <script src="js/app.min.js"></script>
 </body>
 </html>
