--- a/src/html/head.html
+++ b/src/html/head.html
@@ -2,6 +2,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is a training project to learn vanilla JS. It was created with such technologies as: HTML, SCSS, JS, Gulp">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.min.css">
     <title>@@title</title>
